test: [033-REFACTOR-UNIT-TEST] 상품 Policy 테스트 개선 (given절 리팩토링으로 가독성 향상)
- 상품, 상품옵션, 셀러 생성 시 불필요한 필드 셋팅 제거로 데이터 노이즈 제거
- 픽스처 메서드의 전달인자로 셀러ID, 상품코드 추가로 명확한 데이터 흐름 표현
- mocking 리턴값을 픽스처 메서드로 추출하여 가독성 개선
- 중복 사용되는 값을 변수로 추출 및 변수명 의미 명확화
- 픽스처 메서드명 축약으로 단순화
- 테스트명 오타수정 (validationRegister -> validateRegister)